Contact Section Modified

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server":"node src/api/contact.js"
+    "server": "node src/api/contact.js"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.14",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
